// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ChoiceSliderField > render correctly in multiple mode 1`] = `
<div data-v-3091391c="" class="v-input v-input--horizontal v-input--center-affix v-input--density-default v-locale--is-ltr v-input--dirty v-slider v-locale--is-ltr vd-choice-slider-field vd-form-input-xl">
  <!---->
  <div class="v-input__control">
    <div class="v-slider__container"><input id="input-0" name="input-0" tabindex="-1">
      <div class="v-slider-track" style="--v-slider-track-size: 4px; --v-slider-tick-size: 2px;">
        <div class="v-slider-track__background bg-grey v-slider-track__background--opacity" style="inset-inline-start: 0%; width: 100%;"></div>
        <div class="v-slider-track__fill bg-primary" style="inset-inline-start: 0%; width: 0%;"></div>
        <div class="v-slider-track__ticks v-slider-track__ticks--always-show"></div>
      </div>
      <div class="v-slider-thumb v-locale--is-ltr" style="--v-slider-thumb-position: 0%; --v-slider-thumb-size: 20px;" role="slider" tabindex="0" aria-valuemin="0" aria-valuemax="2" aria-valuenow="0" aria-readonly="false" aria-orientation="horizontal" aria-describedby="input-0-messages" elevation="2">
        <div class="v-slider-thumb__surface text-primary elevation-2"></div>
        <div class="v-slider-thumb__ripple text-primary"></div>
        <transition-stub name="scale-transition" appear="false" persisted="false" css="true">
          <div class="v-slider-thumb__label-container" style="display: none;">
            <div class="v-slider-thumb__label">
              <div>0</div>
            </div>
          </div>
        </transition-stub>
      </div>
    </div>
  </div>
  <!---->
  <div class="v-input__details">
    <transition-stub name="slide-y-transition" appear="false" persisted="false" css="true" tag="div" class="v-messages" role="alert" aria-live="polite" id="input-0-messages">
      <!---->
    </transition-stub>
    <!---->
  </div>
</div>
`;

exports[`ChoiceSliderField > should render correctly 1`] = `
<div data-v-3091391c="" class="v-input v-input--horizontal v-input--center-affix v-input--density-default v-locale--is-ltr v-input--dirty v-slider v-locale--is-ltr vd-choice-slider-field vd-form-input-xl">
  <!---->
  <div class="v-input__control">
    <div class="v-slider__container"><input id="input-0" name="input-0" tabindex="-1">
      <div class="v-slider-track" style="--v-slider-track-size: 4px; --v-slider-tick-size: 2px;">
        <div class="v-slider-track__background bg-grey v-slider-track__background--opacity" style="inset-inline-start: 0%; width: 100%;"></div>
        <div class="v-slider-track__fill bg-primary" style="inset-inline-start: 0%; width: 0%;"></div>
        <div class="v-slider-track__ticks v-slider-track__ticks--always-show"></div>
      </div>
      <div class="v-slider-thumb v-locale--is-ltr" style="--v-slider-thumb-position: 0%; --v-slider-thumb-size: 20px;" role="slider" tabindex="0" aria-valuemin="0" aria-valuemax="2" aria-valuenow="0" aria-readonly="false" aria-orientation="horizontal" aria-describedby="input-0-messages" elevation="2">
        <div class="v-slider-thumb__surface text-primary elevation-2"></div>
        <div class="v-slider-thumb__ripple text-primary"></div>
        <transition-stub name="scale-transition" appear="false" persisted="false" css="true">
          <div class="v-slider-thumb__label-container" style="display: none;">
            <div class="v-slider-thumb__label">
              <div>0</div>
            </div>
          </div>
        </transition-stub>
      </div>
    </div>
  </div>
  <!---->
  <div class="v-input__details">
    <transition-stub name="slide-y-transition" appear="false" persisted="false" css="true" tag="div" class="v-messages" role="alert" aria-live="polite" id="input-0-messages">
      <!---->
    </transition-stub>
    <!---->
  </div>
</div>
`;

exports[`ChoiceSliderField > should toggle the item 1`] = `
<div data-v-3091391c="" class="v-input v-input--horizontal v-input--center-affix v-input--density-default v-locale--is-ltr v-input--dirty v-slider v-locale--is-ltr thumb-label vd-choice-slider-field vd-form-input-xl" style="padding-top: 24px;" outlined="true" labelmin="Min" labelmax="Max">
  <div class="v-input__prepend"><label class="v-label v-slider__label" id="input-0">Classic field
      <!---->
    </label>
    <!---->
    <!---->
  </div>
  <div class="v-input__control">
    <div class="v-slider__container"><input id="input-0" name="input-0" tabindex="-1">
      <div class="v-slider-track" style="--v-slider-track-size: 4px; --v-slider-tick-size: 2px;">
        <div class="v-slider-track__background bg-grey v-slider-track__background--opacity" style="inset-inline-start: 0%; width: 100%;"></div>
        <div class="v-slider-track__fill bg-primary" style="inset-inline-start: 0%; width: 0%;"></div>
        <div class="v-slider-track__ticks v-slider-track__ticks--always-show"></div>
      </div>
      <div class="v-slider-thumb v-locale--is-ltr" style="--v-slider-thumb-position: 0%; --v-slider-thumb-size: 24px;" role="slider" tabindex="0" aria-valuemin="0" aria-valuemax="2" aria-valuenow="0" aria-readonly="false" aria-orientation="horizontal" aria-describedby="input-0-messages" elevation="2">
        <div class="v-slider-thumb__surface text-primary elevation-2"></div>
        <div class="v-slider-thumb__ripple text-primary"></div>
        <transition-stub name="scale-transition" appear="false" persisted="false" css="true">
          <div class="v-slider-thumb__label-container" style="display: none;">
            <div class="v-slider-thumb__label">
              <div>S</div>
            </div>
          </div>
        </transition-stub>
      </div>
    </div>
  </div>
  <!---->
  <div class="v-input__details">
    <transition-stub name="slide-y-transition" appear="false" persisted="false" css="true" tag="div" class="v-messages" role="alert" aria-live="polite" id="input-0-messages">
      <!---->
    </transition-stub>
    <!---->
  </div>
</div>
`;
